# consai2

./: .gitignore  .travis.yml  LICENSE  README.md
consai2_control/: CMakeLists.txt  README.md  package.xml
consai2_description/: CMakeLists.txt  README.md  package.xml
consai2_description/launch/: description.launch
consai2_description/param/: game.yaml  geometry.yaml
consai2_examples/: CMakeLists.txt  README.md  package.xml
consai2_examples/launch/: control_example.launch  demo_pk.launch  demo_pk_goalie.launch  dribler.launch  game.launch  goalie.launch  goalie_baby.launch  joystic_example.launch  mft_atk.launch  mft_atk_baby.launch  pk_example.launch  pk_goalie_auto.launch  visualizer.launch
consai2_examples/param/: joy_f710.yaml  joy_ps4.yaml  pk_joy_dualshock3.yaml  pk_joy_f710.yaml
consai2_game/: CMakeLists.txt  README.md  package.xml
consai2_gui/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
consai2_kazafoo/: CMakeLists.txt  package.xml
consai2_msgs/: CMakeLists.txt  README.md  package.xml
consai2_receiver/: CMakeLists.txt  README.md  package.xml  setup.py
consai2_sender/: CMakeLists.txt  README.md  package.xml
consai2_sender/scripts/proto/: CMakeLists.txt
consai2_world_observer/: CMakeLists.txt  README.md  package.xml
consai2_world_observer/include/world_observer/: ball_estimator.hpp  enemy_estimator.hpp  estimator.hpp  world_observer_ros.hpp
consai2_world_observer/include/world_observer/geometry/: geometry.hpp
consai2_world_observer/src/: main.cpp  world_observer_ros.cpp
consai2_world_observer/src/estimator/: ball_estimator.cpp  enemy_estimator.cpp  estimator.cpp
consai2_world_observer/src/geometry/: geometry.cpp
(+85 files in other folders)
